[project]
name = "home-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "alexfighterbomber",email = "ssamsobi@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.4"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

