[tool.poetry]
name = "goit-web-hw-02"
version = "0.1.0"
description = ""
authors = ["alexfighterbomber <ssamsobi@gmail.com>"]
readme = "README.md"
packages = [{include = "goit_web_hw_02"}]

[tool.poetry.dependencies]
python = "3.13.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
